# ttwinstaller-qt6

./: .gitmodules  CMakeLists.txt  README.md
Installer/: DependencyRegistry.cpp  DependencyRegistry.hpp  FinalizedTextWriter.cpp  FinalizedTextWriter.hpp  IInstaller.hpp  ILog.hpp  IPathStore.hpp  Installer.cpp  Installer.hpp  Log.cpp  Log.hpp  Program.cpp  Program.hpp  RegistryPathStore.cpp  RegistryPathStore.hpp  SettingsPathStore.cpp  SettingsPathStore.hpp  Util.cpp  Util.hpp
Installer/Install/: BsaInstaller.cpp  BsaInstaller.hpp  BuildBsasStep.cpp  BuildBsasStep.hpp  BuildFOMODsStep.cpp  BuildFOMODsStep.hpp  CheckingRequiredFilesStep.cpp  CheckingRequiredFilesStep.hpp  FOMOD.cpp  FOMOD.hpp  IInstallStep.hpp  NVSE.cpp  NVSE.hpp
Installer/Patching/: BSADiff.cpp  BSADiff.hpp  Diff.cpp  Diff.hpp  Extensions.cpp  Extensions.hpp  FileValidation.cpp  FileValidation.hpp  IBsaDiff.hpp  PatchDict.cpp  PatchDict.hpp  PatchInfo.cpp  PatchInfo.hpp
Installer/Progress/: IInstallStatus.hpp  IInstallStatusUpdate.cpp  IInstallStatusUpdate.hpp  InstallStatus.cpp  InstallStatus.hpp  Progress.cpp  Progress.hpp
Installer/Properties/: Game.Designer.hpp  Game.hpp
Installer/UI/: ErrorPromptResult.hpp  IPrompts.hpp  Prompts.cpp  Prompts.hpp  TextProgressBar.cpp  TextProgressBar.hpp  frm_Main.Designer.hpp  frm_Main.cpp  frm_Main.hpp
PatchMaker/: BenchmarkHash.cpp  BenchmarkHash.hpp  MakeDiff.cpp  MakeDiff.hpp  Program.cpp  Program.hpp  sais.cpp  sais.hpp
PatchMaker/Properties/: AssemblyInfo.hpp
src/Installer/: DependencyRegistry.cpp  IInstaller.hpp  (+15 more)
unused/: AssemblyInfo.cs
(+54 files in other folders)
